feat: 添加前端界面的 API 支持
